--- a/login-sample/login.html
+++ b/login-sample/login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Bootflat-Admin Template</title>
+    <title>Login</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="favicon_16.ico"/>
     <link rel="bookmark" href="favicon_16.ico"/>
@@ -47,10 +47,6 @@
             <input type="password" class="form-control" name="password" id="password" placeholder="Password" autocomplete="off" />
           </div>
         </div>
-
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> &nbsp Remember me
-        </label>
         <button class="btn btn-lg btn-primary btn-block" type="button" id="btnLogin">Sign in</button>
       </form>
 
@@ -93,7 +89,11 @@
           if(!$('#loginForm').valid()){
             return false;
           }
-          console.log('valid');
+          var userName = $('#username').val();
+          var password = $('#password').val();
+          if(userName=='admin' && password == 'admin'){
+            window.location='index.html'
+          }
         })
 
       });
