lib folder added to artifact

--- a/login-sample/index.html
+++ b/login-sample/index.html
@@ -37,7 +37,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand">Bootflat-Admin</a>
+            <a href="#" class="navbar-brand">Slick-Admin</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -620,7 +620,7 @@
       <div class="container">
         <div class="download">
           <span class="download__infos">You simply have to <b>try it</b>.</span>&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="btn btn-primary" href="https://github.com/silverbux/bootflat-admin/archive/master.zip">Download Bootflat-Admin</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="btn btn-primary" href="https://github.com/silverbux/Slick-admin/archive/master.zip">Download Slick-Admin</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <!-- SmartAddon BEGIN -->
             <script type="text/javascript">
             (function() {
@@ -630,22 +630,22 @@
             })();
             </script>
 
-            <a href="http://www.smartaddon.com/?share" title="Share Button" onclick="return sa_tellafriend('','bookmarks')"><img alt="Share" src="http://bootflat.github.io/img/share.gif" border="0" /></a>
+            <a href="http://www.smartaddon.com/?share" title="Share Button" onclick="return sa_tellafriend('','bookmarks')"><img alt="Share" src="http://Slick.github.io/img/share.gif" border="0" /></a>
             <!-- SmartAddon END -->
         </div>
         <hr class="dashed" />
         <div class="row">
           <div class="col-md-4">
             <h3>Get involved</h3>
-            <p>Bootflat is hosted on <a href="https://github.com/silverbux/bootflat-admin" target="_blank" rel="external nofollow">GitHub</a> and open for everyone to contribute. Please give us some feedback and join the development!</p>
+            <p>Slick is hosted on <a href="https://github.com/silverbux/Slick-admin" target="_blank" rel="external nofollow">GitHub</a> and open for everyone to contribute. Please give us some feedback and join the development!</p>
           </div>
           <div class="col-md-4">
             <h3>Contribute</h3>
-            <p>You want to help us and participate in the development or the documentation? Just fork Bootflat on <a href="https://github.com/silverbux/bootflat-admin" target="_blank" rel="external nofollow">GitHub</a> and send us a pull request.</p>
+            <p>You want to help us and participate in the development or the documentation? Just fork Slick on <a href="https://github.com/silverbux/Slick-admin" target="_blank" rel="external nofollow">GitHub</a> and send us a pull request.</p>
           </div>
           <div class="col-md-4">
             <h3>Found a bug?</h3>
-            <p>Open a <a href="https://github.com/silverbux/bootflat-admin/issues" target="_blank" rel="external nofollow">new issue</a> on GitHub. Please search for existing issues first and make sure to include all relevant information.</p>
+            <p>Open a <a href="https://github.com/silverbux/Slick-admin/issues" target="_blank" rel="external nofollow">new issue</a> on GitHub. Please search for existing issues first and make sure to include all relevant information.</p>
           </div>
         </div>
         <hr class="dashed" />
@@ -677,7 +677,7 @@
         </div>
         <hr class="dashed" />
         <div class="copyright clearfix">
-          <p><b>Bootflat</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="getting-started.html">Getting Started</a>&nbsp;&bull;&nbsp;<a href="index.html">Documentation</a>&nbsp;&bull;&nbsp;<a href="https://github.com/Bootflat/Bootflat.UI.Kit.PSD/archive/master.zip">Free PSD</a>&nbsp;&bull;&nbsp;<a href="colors.html">Color Picker</a></p>
+          <p><b>Slick</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="getting-started.html">Getting Started</a>&nbsp;&bull;&nbsp;<a href="index.html">Documentation</a>&nbsp;&bull;&nbsp;<a href="https://github.com/Slick/Slick.UI.Kit.PSD/archive/master.zip">Free PSD</a>&nbsp;&bull;&nbsp;<a href="colors.html">Color Picker</a></p>
           <p>Code licensed under <a href="http://opensource.org/licenses/mit-license.html" target="_blank" rel="external nofollow">MIT License</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/" rel="external nofollow">CC BY 3.0</a>.</p>
         </div>
       </div>
